# CampaignScribe

./: .coderabbit.yaml  CampaignScribe.spec  PRIVACY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: config.py
app/core/: audio.py  diagnostics.py  library.py  privacy.py  summarizer.py  support.py  transcriber.py  voiceprints.py
app/data/: db.py
app/ui/: app_window.py  build_profile_tab.py  campaign_picker.py  campaigns_tab.py  common.py  discover_tab.py  edit_profile_window.py  feedback_dialog.py  history_tab.py  home_tab.py  refine_tab.py  session_view.py  settings_dialog.py  speaker_editor.py  summarize_tab.py  theme.py  transcribe_tab.py
docs/: CONTRIBUTING.md
tests/: conftest.py
tests/gui/: test_edit_profile_window.py  test_feedback_dialog.py  test_home_tab.py  test_session_view.py  test_session_view_count.py  test_session_view_voicematch.py  test_stage_tabs_session.py  test_summarize_npcs_wiring.py  test_ui_scroll_protection.py
tests/integration/: test_pipeline.py
tests/smoke/: test_app_smoke.py  test_campaign_home.py  test_campaigns.py  test_library_migration.py  test_privacy_dialog.py  test_theme_switch.py  test_voice_auto_match.py
tests/unit/: test_audio_sample.py  test_build_profile_library.py  test_claude_api.py  test_config.py  test_config_theme.py  test_consuming_pickers.py  test_db.py  test_db_campaign_slug.py  test_diagnostics.py  test_library.py  test_no_legacy_tab_refs.py  test_privacy.py  test_speaker_id.py  test_speakers_io.py  test_subprocess_no_window.py  (+6 more)
(+10 files in other folders)
